--- a/experiments/1_norming/faultless-disagreement.html
+++ b/experiments/1_norming/faultless-disagreement.html
@@ -82,7 +82,7 @@
 
   <div class="slide" id="instructions1">
     <h3>Instructions</h3>
-    <p> You will be presented with different properties. For each property, your task is to determine how good or bad it is for someone to have that property. If you think that having the property is neither particularly good nor particularly bad, position the slider in the middle of the scale. 
+    <p> You will be presented with different properties. <b>For each property, your task is to rate on a sliding scale how good or bad it is for someone to have that property.</b> If you think that having the property is neither particularly good nor particularly bad, position the slider in the middle of the scale. 
 
       For example, you might think that being rich is very good, being sick is very bad, and being casual is neither good nor bad. 
       
