target exp updates

--- a/experiments/2_blm/faultless-disagreement.html
+++ b/experiments/2_blm/faultless-disagreement.html
@@ -54,7 +54,8 @@
   <div class="slide" id="i0" >
     <img src="../_shared/images/alpslogo.png" alt="Stanford ALPS Lab" id="cocologo"></img>
     <p id="alpslab">Stanford ALPS Lab</p>
-    <p id="instruct-text">This HIT occurs in 3 parts. The first involves interpreting sentences of English. In the second, you'll be asked to report how you feel about different groups of people. Finally, you'll answer some questions about yourself. The task should take about six minutes. Please pay attention. Thanks!</p>
+    <p id="instruct-text">This HIT occurs in 3 parts. The first involves responding to sentences of English. In the second, you'll be asked to report how you feel about different groups of people. Finally, you'll answer some questions about yourself. No identifying information will be collected. <br><br>
+    The task should take about six minutes. Please pay attention -- thanks!</p>
     <button id="start_button" type="button">Start Experiment</button>
     <p id="legal">We invite you to participate in a research study on language production and comprehension.
       Your experimenter will ask you to do a linguistic task such as reading sentences or words,
@@ -82,7 +83,7 @@ If you agree to participate, please proceed to the study tasks.</p>
 
   <div class="slide" id="instructions1">
     <h3>Part 1 Instructions</h3>
-    <p> You will see 48 statements about various groups of people. Your task is to agree or disagree with each statement and choose a statement that best reflects how you would respond to it.</p>
+    <p> You will see 45 statements about various groups of people. For each statement, choose how you would like to respond to it. Don't spend a lot of time thinking about how to respond, simply choose the response that best captures your gut response. </p>
     <!-- <p class="instruction_condition">{{}}</p> -->
     <button onclick="_s.button()">Continue</button>
   </div>
@@ -91,7 +92,7 @@ If you agree to participate, please proceed to the study tasks.</p>
 
   <p class="name_said"></p>
 
-    <p>Consider the following statement:</p>
+    <p><i>Consider the following statement:</i></p>
 
 <!--    <p><span class = "woman">{{}}</span> sold a <span class="noun">{{}}</span> in her store.</p>
 
@@ -107,7 +108,7 @@ If you agree to participate, please proceed to the study tasks.</p>
     <label><input type="radio"  name="sense" value="No"/>No</label>
     </br></br>
  -->
-    <p>How would you respond?</p>
+    <p><i>How do you respond?</i></p>
 
     <div id = "radio_outer_container" align = "center">
       <div id="radio_inner_container" align="left">
